export const tripProgressCard = {
  en: {
      eta: 'ETA:',
      m_left: 'm left',
  },
  ar: {
      eta: 'الوصول المتوقع:',
      m_left: 'م متبقٍ',
  }
} as const;

